arkts_static_test/11_Enumerations/ets_cases/11.2_Enumeration_with_Explicit_Base_Type/compile-fail/ENM_11_02_007_FAIL_OBJECT_BASE.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id ENM_11_02_007_FAIL_OBJECT_BASE
 * @expect compile-fail
 * @section 11.2
 * @design Object 作显式基类应编译错误
 * @note 反向用例：显式类型非数值/string
 */
enum Bad7: Object { A = null }